# space

./: .ycm_extra_conf.py  CMakeLists.txt
assets/: cycloid.pam  spaceship.pam
src/: alignment.h  base_defines.h  basetypes.h  bitmap.c  bitmap.h  bitmap_cache.c  bitmap_cache.h  build.c  build_dependencies.c  color.c  color.h  cycloid.c  cycloid.h  cycloid_wave.c  cycloid_wave.h  dynarr.c  dynarr.h  entity.c  entity.h  game_behavior.c  game_behavior.h  game_state.c  game_state.h  main.c  random.c  random.h  range.c  range.h  recti.c  recti.h  spaceship.c  spaceship.h  sprite.c  sprite.h  star_field.c  star_field.h  vec2f.c  vec2f.h  vec2i.c  vec2i.h  (+2 more)
